--- a/f_sharp_vs_c_sharp/GUI.csproj
+++ b/f_sharp_vs_c_sharp/GUI.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -87,6 +88,12 @@
       <Project>{3d0276af-a599-4e73-afc2-5fa1ed52a741}</Project>
       <Name>Logic_fSharp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\convert-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\convert-icon2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
